# teaching_review_creator

./: .gitignore  README.md  article1.md  article2.md  pyproject.toml  render.yaml  requirements.txt
api/: crew_runner.py  fast_api.py
database/: database.py  models.py
src/teach_competing/: article1.md  article2.md  crew.py  main.py
src/teach_competing/config/: agents.yaml  tasks.yaml
templates/: index.html
